docs: update Search installation instructions
Clouseau 3.x has now become the supported version of Search, which
works with more recent Java versions (in contrast to 2.x) and it
features a new configuration file format (but with the same
parameters).  Update the respective part of the installation guide
to chase these changes.